# __sk-2021

./: .gitignore  .prettierrc  CMakeLists.txt  index.html  package-lock.json  package.json  readme.md  tsconfig.json
src/backend/: console.c  error_handle.c  error_handle.h  imports.h  main.c  server.c  utils.c  utils.h
src/backend/events/: chain.c  chain.h  events.c  events.h  listeners.c  listeners.h
src/backend/events/listeners/: client.c  listeners.c  listeners.h  server.c  server.h  stdin.c  stdin.h
src/backend/events/listeners/client/: client.c  client.h
src/backend/events/threads/: chain.c  chain.h  thread.c  thread.h
src/backend/server/: server.c  server.h  sockets.c  sockets.h  statistics.c
src/backend/server/responses/: datagrams.c  datagrams.h  responses.c  responses.h
src/backend/shared/: imports.h
src/backend/shared/utils/: colors.c  colors.h  common.c  common.h  console.c  console.h  encryption.c  encryption.h  error_handle.c  error_handle.h  sockets.c  sockets.h
src/backend/statistics/: server.h  statistics.c
src/frontend/: App.tsx  index.scss  index.tsx
src/frontend/components/: index.ts
src/frontend/components/App/: App.scss  App.tsx
src/frontend/components/ClientView/: ClientView.scss  ClientView.tsx  index.ts
src/frontend/components/ClientView/components/: Login.tsx
src/frontend/components/MessageList/: MessageList.tsx
src/frontend/components/Tile/: Tile.tsx
src/frontend/components/UserList/: UserList.tsx
src/frontend/components/devtools/: Logger.scss  Logger.tsx
src/frontend/hooks/: index.ts  useServerInfo.ts  useToggle.ts
src/frontend/hooks/useConnection/: index.ts  useConnection.tsx  useConnectionContext.ts
src/frontend/hooks/useServer/: index.ts  useServer.tsx  useServerContext.ts  useServerInfo.ts
src/frontend/hooks/useSocket/: connectionStatus.ts  index.ts  socket-status.ts  socketStatus.ts  useSocket.ts
src/frontend/hooks/useUser/: index.ts  useUser.ts  useUser.tsx  useUserContext.ts
src/frontend/models/: message.ts
src/frontend/services/: command.service.ts  index.ts  types.ts  utils.ts
src/frontend/utils/: classnames.ts  index.ts
